examples/kubernetes/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
spec:
  forwardAuth:
    address: http://forward-auth:8080
    authResponseHeadersRegex: ^Jwt-
