examples/kubernetes/forward-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-auth
spec:
  selector:
    matchLabels:
      app: forward-auth
  template:
    metadata:
      labels:
        app: forward-auth
    spec:
      containers:
      - name: forward-auth
        image: ghcr.io/bennesp/jwt-forward-auth
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: forward-auth
spec:
  selector:
    app: forward-auth
  ports:
  - port: 8080
